# kompass

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CNAME  README.ja.md  README.md  README.zh.md  cli.html  genindex.html  index.html  index.md  install.html  install.md  llms.txt  objects.inv  overview.html  overview.md  py-modindex.html  pyproject.toml  quick_start.html  robots.txt  search.html  searchindex.js  sitemap.xml  why.html
.doctrees/: cli.doctree  environment.pickle  index.doctree  install.doctree  overview.doctree  quick_start.doctree  why.doctree
.doctrees/advanced/: benchmark.doctree  components.doctree  design.doctree  extending.doctree  index.doctree  types.doctree
.doctrees/apidocs/: index.doctree
.doctrees/design/: actions.doctree  component.doctree  events.doctree  fallbacks.doctree  index.doctree  launcher.doctree  monitor.doctree  status.doctree  topics.doctree
.doctrees/integrations/: fcl.doctree  ompl.doctree
.doctrees/navigation/: control.doctree  driver.doctree  index.doctree  map_server.doctree  mapper.doctree  mapping_localization.doctree  motion_server.doctree  path_planning.doctree  robot.doctree
.doctrees/tutorials/: configuration.doctree  events_actions.doctree  index.doctree  point_navigation.doctree  quick_start.doctree  (+4 more)
_sources/: index.md  install.md  overview.md  quick_start.md
_static/: documentation_options.js
advanced/: benchmark.html  components.html  design.html  design.md  extending.html  index.html  types.html
apidocs/: index.html
design/: actions.html  component.html  events.html  fallbacks.html  index.html  launcher.html  monitor.html  status.html  topics.html
docs/: README.ja.md  README.zh.md  cli.md  conf.py  index.md  install.md  overview.md  quick_start.md  why.md
integrations/: fcl.html  ompl.html
kompass/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
kompass/kompass/: __init__.py  _external_types.py  actions.py  callbacks.py  cli.py  config.py  control.py  data_types.py  event.py  executable.py  launcher.py  monitor.py  robot.py  ros.py  topic.py  utils.py
kompass/kompass/components/: __init__.py  _modes.py  _vision_follower.py  component.py  controller.py  defaults.py  drive_manager.py  map_server.py  mapper.py  motion_server.py  planner.py  ros.py  utils.py  visualizer.py
kompass/params/: turtlebot3.json  turtlebot3.toml  turtlebot3.yaml
kompass/recipes/: turtlebot3.py
kompass/simulation/launch/: cartographer_launch.py  occupancy_grid_launch.py  rviz_kompass_launch.py  webots_tiago.launch.py  webots_tiago_launch.py  webots_turtlebot3_launch.py
kompass/simulation/resources/: tiago_localization.yaml  turtlebot3_localization.yaml  webots.rviz
kompass/simulation/resources/maps/: tiago_office.pgm  tiago_office.yaml  turtlebot3_webots.pgm  turtlebot3_webots.yaml
kompass/simulation/resources/params/: turtlebot3_cartographer.lua
kompass/test/: test_path_control.py  test_planner.py  test_vision_tracking.py
kompass_interfaces/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
kompass_interfaces/action/: ControlPath.action  FollowPath.action  IntelligentRest.action  MotionRecording.action  PlanPath.action  TrackPath.action  TrackVisionTarget.action
kompass_interfaces/msg/control/: ControllerInfo.msg
kompass_interfaces/msg/geometry/: Path.msg  PathPoints.msg  Point.msg  Pose2D.msg  Pose3D.msg  Quaternion.msg
kompass_interfaces/msg/map/: GridMetaData.msg  Obstacles.msg  OccupancyGrid.msg
kompass_interfaces/msg/motion/: FollowPathRequest.msg  MotionStatus.msg  PathTrackingError.msg  PathTrackingErrorArray.msg  TwistArray.msg  VectorArray.msg
kompass_interfaces/msg/prediction/: PredictedOccupancies.msg  PredictedTrajectories.msg
kompass_interfaces/msg/ref/: MapMetaData.msg  OccupancyGrid.msg
kompass_interfaces/msg/vision/: BoundingBox.msg  Detection.msg  DetectionArray.msg
kompass_interfaces/srv/control/: GetMppiSamples.srv  StopVisionTracking.srv
kompass_interfaces/srv/mapping/: Save2dMapToFile.srv  Save3dMapToFile.srv
kompass_interfaces/srv/motion/: GetCmdList.srv  PathFromToFile.srv  PlanPath.srv  StartPathRecording.srv
kompass_interfaces/srv/prediction/: GetPredictedOccupancies.srv  GetPredictedTrajectories.srv
navigation/: control.html  driver.html  index.html  index.md  map_server.html  mapper.html  mapper.md  mapping_localization.html  motion_server.html  path_planning.html  path_planning.md  robot.html  robot.md
tutorials/: configuration.html  configuration.md  events_actions.html  index.html  point_navigation.html  point_navigation.md  quick_start.html  quick_start.md  quick_start_gazebo.html  quick_start_webots.html  quick_start_webots.md  vision_tracking.html  vision_tracking_depth.html
(+235 files in other folders)
