<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kompass</name>
  <version>0.3.0</version>
  <description>Kompass: Event-driven navigation system</description>
  <maintainer email="contact@automatikarobotics.com">Automatika Robotics</maintainer>
  <license>MIT</license>

  <depend>python3-pykdl</depend>
  <depend>kompass_interfaces</depend>
  <depend>automatika_ros_sugar</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
